# kmcomp

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
cmake/: avx2.cmake  sse2.cmake
include/: bitmatrixshuffle.h  fast_median.h  kmcomp.h  rng.h  tsp.h  vptree.h  vptree_impl.h
src/: bitmatrixshuffle.cpp  fast_median.cpp  kmcomp.cpp  main_bitmatrixshuffle.cpp  main_kmcomp.cpp  rng.cpp  tsp.cpp
